Implemented frontend components.

--- a/static/index.html
+++ b/static/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="ru">
-    <head>
-        <title>Hondana -- краудсорсинговая библиотека</title>
-        <meta charset="utf-8"/>
-    </head>
-    <body>
-        <script src="js/app.js"></script>
-    </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Hondana -- краудсорсинговая библиотека</title>
+</head>
+<body>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/2.xx.x/css/uikit.min.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/2.xx.x/js/uikit.min.js"></script>
+    <script src="js/app.js"></script>
+</body>
 </html>
